--- a/ae2/ae2.8/estilos.css
+++ b/ae2/ae2.8/estilos.css
@@ -1,6 +1,6 @@
  /* Contenedor del Call to Action */
     .contenedor {
-      background-image: url('https://cdn.uc.assets.prezly.com/e63873d1-e785-469d-8fc3-e2097b7d3455/1267x525_news%20banner%20-%20preview%20(1).jpg'); /* Imagen de fondo */
+      background-image: url('https://cdna.artstation.com/p/assets/images/images/054/917/394/large/amelion-abby-commission-mda.jpg?1665669068'); /* Imagen de fondo */
       background-size: cover;       /* Cubrir completamente el contenedor */
       background-position: center;  /* Centrar la imagen */
       background-repeat: no-repeat; /* Evitar repetición */
