--- a/ae2/ae2.17/estilos.css
+++ b/ae2/ae2.17/estilos.css
@@ -1,4 +1,4 @@
-/* ===== Diseño base hasta 600px (1 columna) ===== */
+/* ===== Diseño base hasta 600px ===== */
 body{
     font-family: "Times New Roman", serif;
     width: 90%;
@@ -13,7 +13,7 @@ h2{
     font-size: 1.2em;
 }
 
-/* selector obligatorio solicitado enunciado */
+/* selector obligatorio*/
 li strong{
     color: purple;
 }
